--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@types/nodemailer": "^6.4.16",
     "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
+    "nodemailer": "^6.9.15",
     "solid-js": "^1.9.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
