--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.1",
     "@types/nodemailer": "^6.4.16",
     "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
