--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "^7.8.1",
+    "@prisma/client": "^5.20.0",
     "@types/nodemailer": "^6.4.16",
     "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
     "nodemailer": "^6.9.15",
+    "prisma": "^5.20.0",
     "solid-js": "^1.9.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
