--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "contest-reminder",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -18,6 +18,7 @@
     "@types/nodemailer": "^6.4.16",
     "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
+    "dayjs": "^1.11.13",
     "nodemailer": "^6.9.15",
     "prisma": "^5.20.0",
     "solid-js": "^1.9.1",
